--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Teleported 
 email: me DOT anandsaha AT gmail.com
-description: "Brain dumps of myself. Mostly computer science and maths stuff."
+description: "Brain dumps of myself. Mostly computer science and maths stuff. And a little bit of distributed systems."
 baseurl: ""
 url: "http://teleported.in"
 twitter_username: the_teleported
@@ -13,4 +13,5 @@ permalink: pretty
 
 exclude: ['README.md']
 timezone: Asia/Calcutta
-include: ['.htaccess']
+include: ['.htaccess','assets']
+keep_files: ['assets']
