--- a/blog/.myblog/_config.yml
+++ b/blog/.myblog/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Teleported 
-email: me DOT anandsaha AT gmail.com
-description: "Brain dumps of myself. Mostly computer science and maths stuff. And a little bit of distributed systems."
+email: ic19929 AT gmail.com
+description: "Hmm."
 baseurl: "/blog"
 url: "http://teleported.in"
 twitter_username: the_teleported
