--- a/teleported/config.toml
+++ b/teleported/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://teleported.in/"
 theme = "hugo-theme-minos"
 languageCode = "en-us"
 title = "Teleported.in"
