--- a/teleported/config.toml
+++ b/teleported/config.toml
@@ -6,5 +6,5 @@ title = "teleported.in"
 
 [params]
     smartToc = true
-    disqusShortname = "teleported.in"
+    disqusShortname = "teleported-in"
     googleAnalytics = "UA-98287631-1"
