--- a/teleported/config.toml
+++ b/teleported/config.toml
@@ -3,6 +3,7 @@ theme = "hugo-theme-minos"
 languageCode = "en-us"
 title = "teleported.in"
 author = "Anand Saha"
+description = "A blog about..."
 
 SectionPagesMenu = "main"
 [[menu.main]]
@@ -15,3 +16,4 @@ SectionPagesMenu = "main"
     smartToc = true
     disqusShortname = "teleported-in"
     googleAnalytics = "UA-98287631-1"
+    description = "A blog about..."
