--- a/teleported/config.toml
+++ b/teleported/config.toml
@@ -12,11 +12,11 @@ SectionPagesMenu = "main"
     identifier = "about"
     url = "/about/about"
 
-[[menu.main]]
-    name = "Projects"
-    weight = -110
-    identifier = "projects"
-    url = "/projects/projects"
+#[[menu.main]]
+#    name = "Projects"
+#    weight = -110
+#    identifier = "projects"
+#    url = "/projects/projects"
 
 [params]
     smartToc = true
